vbnc/vbnc/tests/Errors/30225.vb
Option Strict On
Option Strict Off
